--- a/G365FF_HFT_2023241.Repository/G365FF_HFT_2023241.Repository.csproj
+++ b/G365FF_HFT_2023241.Repository/G365FF_HFT_2023241.Repository.csproj
@@ -5,6 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="HallgatoDbContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="HallgatoDbContext.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
   </ItemGroup>
 
