--- a/G365FF_HFT_2023241.Client/G365FF_HFT_2023241.Client.csproj
+++ b/G365FF_HFT_2023241.Client/G365FF_HFT_2023241.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Repository\G365FF_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
