Crud metodósuok logic rétegber implementálása

--- a/G365FF_HFT_2023241.Repository/G365FF_HFT_2023241.Repository.csproj
+++ b/G365FF_HFT_2023241.Repository/G365FF_HFT_2023241.Repository.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="TaxiDbContext.cs">
+    <Compile Update="Data\TaxiDbContext.cs">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
