--- a/G365FF_HFT_2023241.Client/G365FF_HFT_2023241.Client.csproj
+++ b/G365FF_HFT_2023241.Client/G365FF_HFT_2023241.Client.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\G365FF_HFT_2023241.Logic\G365FF_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Repository\G365FF_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
