--- a/G365FF_HFT_2023241.Test/G365FF_HFT_2023241.Test.csproj
+++ b/G365FF_HFT_2023241.Test/G365FF_HFT_2023241.Test.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\G365FF_HFT_2023241.Logic\G365FF_HFT_2023241.Logic.csproj" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Repository\G365FF_HFT_2023241.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
