--- a/G365FF_HFT_2023241.Test/G365FF_HFT_2023241.Test.csproj
+++ b/G365FF_HFT_2023241.Test/G365FF_HFT_2023241.Test.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.17.1" />
     <PackageReference Include="NUnit" Version="4.0.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
