--- a/G365FF_HFT_2023241_Endpoint/G365FF_HFT_2023241_Endpoint.csproj
+++ b/G365FF_HFT_2023241_Endpoint/G365FF_HFT_2023241_Endpoint.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Logic\G365FF_HFT_2023241.Logic.csproj" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\G365FF_HFT_2023241.Repository\G365FF_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
