--- a/G365FF_HFT_2023241.Client/G365FF_HFT_2023241.Client.csproj
+++ b/G365FF_HFT_2023241.Client/G365FF_HFT_2023241.Client.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\G365FF_HFT_2023241.Logic\G365FF_HFT_2023241.Logic.csproj" />
+    <PackageReference Include="ConsoleMenu-simple" Version="2.4.2" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
-    <ProjectReference Include="..\G365FF_HFT_2023241.Repository\G365FF_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
