--- a/G365FF_HFT_2023241.WpfClient/G365FF_HFT_2023241.WpfClient.csproj
+++ b/G365FF_HFT_2023241.WpfClient/G365FF_HFT_2023241.WpfClient.csproj
@@ -12,4 +12,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.2" />
 		<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\G365FF_HFT_2023241.Models\G365FF_HFT_2023241.Models.csproj" />
+	</ItemGroup>
 </Project>
